# auto-report-generator

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  workspace.code-workspace
.devcontainer/: devcontainer.json
src/: gen-report.py
